--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 :root{
-    --cor-de-fundo: 000000
-    --cor-da-fonte: FFFFFF
-    cor--fonte-titulos: FFFFFF
+    --cor-de-fundo: 000000;
+    --cor-da-fonte: FFFFFF;
+    cor--fonte-titulos: FFFFFF;
 } 
 
 body{
