--- a/estilo.css
+++ b/estilo.css
@@ -4,6 +4,7 @@
     --cor-de-fundo: #000000;
     --cor-da-fonte: #FFFFFF;
     --cor--fonte-titulos: #FFFFFF;
+    --cor-de-fundo-cabecalho: #69751D;
 } 
 
 body{
