--- a/estilos/header.css
+++ b/estilos/header.css
@@ -1,6 +1,6 @@
 .cabecalho{
-    background-color: var(#000000)
-    color:white
+    background-color: var(#000000);
+    color:white;
 }
 
 .cabecalho--menu-hamburguer{
