--- a/estilo.css
+++ b/estilo.css
@@ -16,4 +16,5 @@ background-color: var(--cor-de-fundo);
     color: #FFFFFF;
     font-size: 16px;
     display:flex;
+    justify-content: space-evenly;
 }
