--- a/estilo.css
+++ b/estilo.css
@@ -17,4 +17,5 @@ background-color: var(--cor-de-fundo);
     font-size: 16px;
     display:flex;
     justify-content: space-evenly;
+    margin-bottom: 20px;
 }
