--- a/estilo.css
+++ b/estilo.css
@@ -19,3 +19,11 @@ background-color: var(--cor-de-fundo);
     justify-content: space-evenly;
     margin-bottom: 20px;
 }
+
+footer{
+    width: 100%;
+    height: 100px;
+    background-image: url("./img/rodape.jpeg");
+    background-position: center;
+    background-size: contain;
+}
