--- a/estilo.css
+++ b/estilo.css
@@ -22,9 +22,11 @@ background-color: var(--cor-de-fundo);
 
 footer{
     width: 100%;
-    height: 200px;
+    height: 100px;
     background-image: url("./img/rodape.jpeg");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: cover;
+    position: relative;
+    bottom: -100px;
 }
