--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 @import url(./estilos/header.css);
 
 :root{
-    --cor-de-fundo: #810000;
+    --cor-de-fundo: #236b06;
     --cor-da-fonte: #FFFFFF;
     --cor--fonte-titulos: #FFFFFF;
     --cor-de-fundo-cabecalho: #69751D;
