--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,7 @@
 @import url(./estilos/header.css);
 
 :root{
-    --cor-de-fundo: #1b5304;
+    --cor-de-fundo: #154602;
     --cor-da-fonte: #FFFFFF;
     --cor--fonte-titulos: #FFFFFF;
     --cor-de-fundo-cabecalho: #69751D;
@@ -23,7 +23,7 @@ background-color: var(--cor-de-fundo);
 footer{
     width: 100%;
     height: 100px;
-    background-image: url("./img/rodape.jpeg");
+    background-image: url("./img/raxw.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
