--- a/estilo.css
+++ b/estilo.css
@@ -43,5 +43,10 @@ footer{
     .container--titulo{
         display: block;
     }
-    
+    .opcoes{
+        display:block;
+    }
+    .menu{
+        display:none;
+    }
 }
