--- a/estilo.css
+++ b/estilo.css
@@ -37,6 +37,15 @@ footer{
     height: 100px;
 }
 
+.tamanho-img2{
+    width: 100px;
+    height: 100px;
+}
+
+.tamanho-img3{
+    width: 100px;
+    height: 100px;
+}
 
 
 @media screen and(min-width:  1024px;) {
