--- a/estilo.css
+++ b/estilo.css
@@ -22,7 +22,7 @@ background-color: var(--cor-de-fundo);
 
 footer{
     width: 100%;
-    height: 300px;
+    height: 200px;
     background-image: url("./img/raxw.png");
     background-repeat: no-repeat;
     background-position: center;
@@ -44,7 +44,7 @@ footer{
 
 .tamanho-img3{
     width: 100px;
-    height: 100px;
+    height: ;
 }
 
 
