--- a/estilo.css
+++ b/estilo.css
@@ -48,7 +48,7 @@ footer{
 }
 
 
-@media screen and(min-width:  1024px) {
+@media (min-width:  1024px) {
     .container--titulo{
         display: block;
     }
@@ -70,5 +70,5 @@ footer{
     width: 300px;
     height: 300px;
 }
-
-    }
+}
+    
